Deps upgrades, new release (#68)
* Upgraded dependencies to Spring Data 4.x, Spring Framework 7.x, JUnit 6 and Apache Commons 3.20.

* Upgraded exec-maven-plugin and maven-surefire-plugin to latest versions.
Fixed deprecation warnings in NosqlRepositoryFactory and ReactiveNosqlRepositoryFactory.

* Fixed testDistinct to run against 26.1 server.

* Prepare for 2.3.0 release.
Updated project reactor to 3.8.2.
Updated CHANGELOG.md.
Fixed warnings.

* Changed copyright to 2026.