@@ -1,10 +1,15 @@
 /*-
- * Copyright (c) 2020, 2025 Oracle and/or its affiliates.  All rights reserved.
+ * Copyright (c) 2020, 2026 Oracle and/or its affiliates.  All rights reserved.
  *
  * Licensed under the Universal Permissive License v 1.0 as shown at
  *  https://oss.oracle.com/licenses/upl/
  */
 package com.oracle.nosql.spring.data.test;
+
+import static org.junit.jupiter.api.Assertions.assertArrayEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.fail;
 
 import java.math.BigDecimal;
 import java.math.BigInteger;
@@ -13,7 +18,6 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Date;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import com.oracle.nosql.spring.data.core.NosqlTemplate;
 import com.oracle.nosql.spring.data.test.app.Address;
@@ -21,11 +25,10 @@ import com.oracle.nosql.spring.data.test.app.AppConfig;
 import com.oracle.nosql.spring.data.test.app.Customer;
 import com.oracle.nosql.spring.data.test.app.CustomerRepository;
 
-import org.junit.After;
-import org.junit.Assert;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
@@ -35,9 +38,9 @@ import org.springframework.data.geo.Circle;
 import org.springframework.data.geo.Point;
 import org.springframework.data.geo.Polygon;
 import org.springframework.test.context.ContextConfiguration;
-import org.springframework.test.context.junit4.SpringJUnit4ClassRunner;
+import org.springframework.test.context.junit.jupiter.SpringExtension;
 
-@RunWith(SpringJUnit4ClassRunner.class)
+@ExtendWith(SpringExtension.class)
 @ContextConfiguration(classes = AppConfig.class)
 public class TestDynamicQuery {
     @SuppressWarnings("SpringJavaInjectionPointsAutowiringInspection")
@@ -45,7 +48,7 @@ public class TestDynamicQuery {
     private CustomerRepository nosqlRepo;
 
     public static Customer c1, c2, c3, c4, c5, c6, c7;
-    private static Customer[] c;
+    private static final Customer[] c;
 
 
     static {
@@ -96,7 +99,7 @@ public class TestDynamicQuery {
     }
 
 
-    @Before
+    @BeforeEach
     public void before() {
         nosqlRepo.deleteAll();
         c1.customerId = c2.customerId = c3.customerId =
@@ -104,7 +107,7 @@ public class TestDynamicQuery {
         nosqlRepo.saveAll(Arrays.asList(c));
     }
 
-    @After
+    @AfterEach
     public void after() {
         nosqlRepo.deleteAll();
     }
@@ -113,13 +116,13 @@ public class TestDynamicQuery {
     public void testSimple() {
         List<Customer> johns = nosqlRepo.findByFirstName("John");
 
-        Assert.assertEquals(2, johns.size());
-        Assert.assertTrue(johns.contains(c3) && johns.contains(c4));
+        assertEquals(2, johns.size());
+        assertTrue(johns.contains(c3) && johns.contains(c4));
 
         List<Customer> smiths = nosqlRepo.findByLastName("Smith");
 
-        Assert.assertEquals(3, smiths.size());
-        Assert.assertTrue(smiths.containsAll(Arrays.asList(c1, c2, c3)));
+        assertEquals(3, smiths.size());
+        assertTrue(smiths.containsAll(Arrays.asList(c1, c2, c3)));
     }
 
     @Test
@@ -127,14 +130,14 @@ public class TestDynamicQuery {
         List<Customer> jAndS = nosqlRepo.findByFirstNameAndLastName("John",
             "Smith");
 
-        Assert.assertEquals(1, jAndS.size());
-        Assert.assertTrue(jAndS.contains(c3));
+        assertEquals(1, jAndS.size());
+        assertTrue(jAndS.contains(c3));
 
         List<Customer> jOrS = nosqlRepo.findByFirstNameOrLastName("John",
             "Smith");
 
-        Assert.assertEquals(4, jOrS.size());
-        Assert.assertTrue(jOrS.containsAll(Arrays.asList(c1, c2, c3, c4)));
+        assertEquals(4, jOrS.size());
+        assertTrue(jOrS.containsAll(Arrays.asList(c1, c2, c3, c4)));
     }
 
     @Test
@@ -142,51 +145,51 @@ public class TestDynamicQuery {
         List<Customer> list;
         list = nosqlRepo.findByKidsGreaterThanAndKidsLessThanEqual(4, 6);
 
-        Assert.assertEquals(2, list.size());
-        Assert.assertTrue(list.containsAll(Arrays.asList(c5, c6)));
+        assertEquals(2, list.size());
+        assertTrue(list.containsAll(Arrays.asList(c5, c6)));
 
 
         list = nosqlRepo.findByLengthIsGreaterThanEqualAndLengthIsLessThan(202,
             404);
 
-        Assert.assertEquals(1, list.size());
-        Assert.assertTrue(list.contains(c3));
+        assertEquals(1, list.size());
+        assertTrue(list.contains(c3));
 
 
         list = nosqlRepo.findByVanilla(true);
 
-        Assert.assertEquals(2, list.size());
-        Assert.assertTrue(list.containsAll(Arrays.asList(c1, c2)));
+        assertEquals(2, list.size());
+        assertTrue(list.containsAll(Arrays.asList(c1, c2)));
 
 
         list = nosqlRepo.findByVanillaIsTrue();
 
-        Assert.assertEquals(2, list.size());
-        Assert.assertTrue(list.containsAll(Arrays.asList(c1, c2)));
+        assertEquals(2, list.size());
+        assertTrue(list.containsAll(Arrays.asList(c1, c2)));
 
 
         list = nosqlRepo.findByWeight(2.2f);
 
-        Assert.assertEquals(1, list.size());
-        Assert.assertTrue(list.contains(c2));
+        assertEquals(1, list.size());
+        assertTrue(list.contains(c2));
 
 
         list = nosqlRepo.findByCoins(3.33d);
 
-        Assert.assertEquals(1, list.size());
-        Assert.assertTrue(list.contains(c3));
+        assertEquals(1, list.size());
+        assertTrue(list.contains(c3));
 
 
         list = nosqlRepo.findByBiField(BigInteger.valueOf(6));
 
-        Assert.assertEquals(1, list.size());
-        Assert.assertTrue(list.contains(c6));
+        assertEquals(1, list.size());
+        assertTrue(list.contains(c6));
 
 
         list = nosqlRepo.findByBdField(BigDecimal.valueOf(7.07d));
 
-        Assert.assertEquals(1, list.size());
-        Assert.assertTrue(list.contains(c7));
+        assertEquals(1, list.size());
+        assertTrue(list.contains(c7));
 
         //todo add tests for Timestamp, Date and Instant
     }
@@ -197,13 +200,13 @@ public class TestDynamicQuery {
 
         list = nosqlRepo.queryByLastNameOrderByFirstNameDesc("Smith");
 
-        Assert.assertEquals(3, list.size());
-        Assert.assertArrayEquals(new Customer[]{c3, c2, c1}, list.toArray());
+        assertEquals(3, list.size());
+        assertArrayEquals(new Customer[]{c3, c2, c1}, list.toArray());
 
         list = nosqlRepo.getByLastNameOrderByFirstNameAsc("Smith");
 
-        Assert.assertEquals(3, list.size());
-        Assert.assertArrayEquals(new Customer[]{c1, c2, c3}, list.toArray());
+        assertEquals(3, list.size());
+        assertArrayEquals(new Customer[]{c1, c2, c3}, list.toArray());
     }
 
     @Test
@@ -211,24 +214,24 @@ public class TestDynamicQuery {
         List<Customer> list;
 
         list = nosqlRepo.findByLastNameIgnoreCase("smIth");
-        Assert.assertEquals(3, list.size());
-        Assert.assertTrue(list.containsAll(Arrays.asList(c1, c2, c3)));
+        assertEquals(3, list.size());
+        assertTrue(list.containsAll(Arrays.asList(c1, c2, c3)));
 
         // ignore case applies to all fields
         list = nosqlRepo.findByLastNameAndFirstNameAllIgnoreCase("smIth", "alIce");
-        Assert.assertEquals(1, list.size());
-        Assert.assertTrue(list.contains(c1));
+        assertEquals(1, list.size());
+        assertTrue(list.contains(c1));
 
         // ignore case applies only to firstName field
         list = nosqlRepo.findByLastNameAndFirstNameIgnoreCase("Smith", "alIce");
-        Assert.assertEquals(1, list.size());
-        Assert.assertTrue(list.contains(c1));
+        assertEquals(1, list.size());
+        assertTrue(list.contains(c1));
 
         // ignore case for IN or NOT_IN expressions
         list = nosqlRepo.findByAddressCityIsInAllIgnoreCase(
             Arrays.asList("metropolis", "ParaDise isLand", "cenTral cITy"));
-        Assert.assertEquals(3, list.size());
-        Assert.assertTrue(list.containsAll(Arrays.asList(c5, c6, c7)));
+        assertEquals(3, list.size());
+        assertTrue(list.containsAll(Arrays.asList(c5, c6, c7)));
     }
 
     @Test
@@ -237,8 +240,8 @@ public class TestDynamicQuery {
 
         list = nosqlRepo.findByAddressCity("Metropolis");
 
-        Assert.assertEquals(1, list.size());
-        Assert.assertTrue(list.contains(c5));
+        assertEquals(1, list.size());
+        assertTrue(list.contains(c5));
     }
 
     @Test
@@ -248,26 +251,26 @@ public class TestDynamicQuery {
         list = nosqlRepo.findByAddressCityIn(Arrays.asList("Metropolis",
             "Paradise Island", "Central City", 3));
 
-        Assert.assertEquals(3, list.size());
-        Assert.assertTrue(list.containsAll(Arrays.asList(c5, c6, c7)));
+        assertEquals(3, list.size());
+        assertTrue(list.containsAll(Arrays.asList(c5, c6, c7)));
 
 
         list = nosqlRepo.findByAddressCityNotIn(Arrays.asList("Metropolis",
             "Paradise Island"));
 
-        Assert.assertEquals(5, list.size());
-        Assert.assertTrue(list.containsAll(Arrays.asList(c1, c2, c3, c4, c6)));
+        assertEquals(5, list.size());
+        assertTrue(list.containsAll(Arrays.asList(c1, c2, c3, c4, c6)));
 
 
         list = nosqlRepo.findByAddressCityIsIn(new ArrayList<>());
-        Assert.assertEquals(0, list.size());
+        assertEquals(0, list.size());
 
 
         try {
-            list = nosqlRepo.findByAddressCityIn("Central City");
-            Assert.fail("Prev line should throw IllegalArgEx!");
+            nosqlRepo.findByAddressCityIn("Central City");
+            fail("Prev line should throw IllegalArgEx!");
         } catch (IllegalArgumentException ile) {
-            Assert.assertTrue(true);
+            assertTrue(true);
         }
     }
 
@@ -277,26 +280,26 @@ public class TestDynamicQuery {
 
         list = nosqlRepo.findByFirstNameStartsWith("Di");
 
-        Assert.assertEquals(1, list.size());
-        Assert.assertTrue(list.contains(c7));
+        assertEquals(1, list.size());
+        assertTrue(list.contains(c7));
 
 
         list = nosqlRepo.findByFirstNameEndsWith("ana");
 
-        Assert.assertEquals(1, list.size());
-        Assert.assertTrue(list.contains(c7));
+        assertEquals(1, list.size());
+        assertTrue(list.contains(c7));
 
 
         list = nosqlRepo.findByFirstNameContains("rr");
 
-        Assert.assertEquals(1, list.size());
-        Assert.assertTrue(list.contains(c6));
+        assertEquals(1, list.size());
+        assertTrue(list.contains(c6));
 
 
         list = nosqlRepo.findByFirstNameIsNotContaining("o");
 
-        Assert.assertEquals(4, list.size());
-        Assert.assertTrue(list.containsAll(Arrays.asList(c1, c5, c6, c7)));
+        assertEquals(4, list.size());
+        assertTrue(list.containsAll(Arrays.asList(c1, c5, c6, c7)));
     }
 
     @Test
@@ -305,8 +308,8 @@ public class TestDynamicQuery {
 
         list = nosqlRepo.findByKidsBetween(3, 6);
 
-        Assert.assertEquals(4, list.size());
-        Assert.assertTrue(list.containsAll(Arrays.asList(c3, c4, c5, c6)));
+        assertEquals(4, list.size());
+        assertTrue(list.containsAll(Arrays.asList(c3, c4, c5, c6)));
 
 
         list =
@@ -314,8 +317,8 @@ public class TestDynamicQuery {
                 Date.from(Instant.parse("1970-01-01T00:00:00Z")),
                 Date.from(Instant.parse("1980-01-01T00:00:00Z")));
 
-        Assert.assertEquals(2, list.size());
-        Assert.assertTrue(list.containsAll(Arrays.asList(c5, c7)));
+        assertEquals(2, list.size());
+        assertTrue(list.containsAll(Arrays.asList(c5, c7)));
     }
 
     @Test
@@ -324,20 +327,20 @@ public class TestDynamicQuery {
 
         list = nosqlRepo.findByFirstNameRegex("J.*");
 
-        Assert.assertEquals(2, list.size());
-        Assert.assertTrue(list.containsAll(Arrays.asList(c3, c4)));
+        assertEquals(2, list.size());
+        assertTrue(list.containsAll(Arrays.asList(c3, c4)));
 
 
         list = nosqlRepo.findByFirstNameLike("J.*");
 
-        Assert.assertEquals(2, list.size());
-        Assert.assertTrue(list.containsAll(Arrays.asList(c3, c4)));
+        assertEquals(2, list.size());
+        assertTrue(list.containsAll(Arrays.asList(c3, c4)));
 
 
         list = nosqlRepo.findByFirstNameIsNotLike("J.*");
 
-        Assert.assertEquals(5, list.size());
-        Assert.assertTrue(list.containsAll(Arrays.asList(c1, c2, c5, c6, c7)));
+        assertEquals(5, list.size());
+        assertTrue(list.containsAll(Arrays.asList(c1, c2, c5, c6, c7)));
     }
 
     @Test
@@ -346,40 +349,46 @@ public class TestDynamicQuery {
 
         list = nosqlRepo.readByFirstName("John");
 
-        Assert.assertEquals(2, list.size());
-        Assert.assertTrue(list.containsAll(Arrays.asList(c3, c4)));
+        assertEquals(2, list.size());
+        assertTrue(list.containsAll(Arrays.asList(c3, c4)));
 
 
         list = nosqlRepo.queryByFirstName("John");
 
-        Assert.assertEquals(2, list.size());
-        Assert.assertTrue(list.containsAll(Arrays.asList(c3, c4)));
+        assertEquals(2, list.size());
+        assertTrue(list.containsAll(Arrays.asList(c3, c4)));
 
 
         long count = nosqlRepo.countByFirstName("John");
-        Assert.assertEquals(2 /* c3 and c4*/, count);
+        assertEquals(2 /* c3 and c4*/, count);
 
 
         Iterable<Customer> iterable = nosqlRepo.getByFirstName("John");
         list = new ArrayList<>();
         iterable.iterator().forEachRemaining(list::add);
-        Assert.assertEquals(2, list.size());
-        Assert.assertTrue(list.containsAll(Arrays.asList(c3, c4)));
+        assertEquals(2, list.size());
+        assertTrue(list.containsAll(Arrays.asList(c3, c4)));
     }
 
     @Test
     public void testDistinct() {
-        try {
-            List<Customer> list =
-                nosqlRepo.readDistinctByFirstNameOrderByCustomerId("John");
-            Assert.fail();
-        } catch (IllegalArgumentException iae) {
-            // must throw java.lang.IllegalArgumentException: Distinct not
-            // supported on full * projection.
-        }
+        List<Customer> list =
+            nosqlRepo.readDistinctByFirstNameOrderByCustomerId("John");
+        assertEquals(2, list.size());
+
+        //System.out.println(Arrays.toString(list.toArray()));
+
+        // the generated query:
+        //   select distinct * from Customer as t where
+        //      t.kv_json_.firstName = "John" ORDER BY t.customerId ASC
+        // doesn't return all the customer properties
+        // assertTrue(list.containsAll(Arrays.asList(c3, c4)));
+
+        assertTrue(c3.customerId == list.get(0).customerId ||
+            c4.customerId == list.get(1).customerId);
 
         long count = nosqlRepo.countDistinctByFirstName("John");
-        Assert.assertEquals(2, count);
+        assertEquals(2, count);
     }
 
     @Test
@@ -392,8 +401,8 @@ public class TestDynamicQuery {
         for (Customer c : page) {
             list.add(c);
         }
-        Assert.assertEquals(1, list.size());
-        Assert.assertTrue(list.contains(c1));
+        assertEquals(1, list.size());
+        assertTrue(list.contains(c1));
 
 
         // return Slice
@@ -405,44 +414,44 @@ public class TestDynamicQuery {
         for (Customer c : slice) {
             list.add(c);
         }
-        Assert.assertEquals(1, list.size());
-        Assert.assertTrue(list.contains(c4));
+        assertEquals(1, list.size());
+        assertTrue(list.contains(c4));
 
 
         // use Sort and return List
         list = nosqlRepo.findByLastName("Smith",
             Sort.by(Sort.Direction.DESC, "kids"));
 
-        Assert.assertEquals(3, list.size());
-        Assert.assertEquals(list, Arrays.asList(c3, c2, c1));
+        assertEquals(3, list.size());
+        assertEquals(list, Arrays.asList(c3, c2, c1));
 
 
         // use Pageable return List
         list = nosqlRepo.findByAddressCity("Central City",
             PageRequest.of(0, 1, Sort.Direction.ASC, "kids"));
 
-        Assert.assertEquals(1, list.size());
-        Assert.assertTrue(list.contains(c6));
+        assertEquals(1, list.size());
+        assertTrue(list.contains(c6));
     }
 
     @Test
     public void testExists() {
         // starting with existsBy
         boolean exists = nosqlRepo.existsByLastName("Smith");
-        Assert.assertTrue(exists);
+        assertTrue(exists);
 
         // exists expression on field
         List<Customer> list;
         list = nosqlRepo.findByAddressCityExists();
 
-        Assert.assertEquals(3, list.size());
-        Assert.assertTrue(list.containsAll(Arrays.asList(c5, c6, c7)));
+        assertEquals(3, list.size());
+        assertTrue(list.containsAll(Arrays.asList(c5, c6, c7)));
     }
 
     @Test
     public void testCount() {
         long count = nosqlRepo.countByLastName("Smith");
-        Assert.assertEquals(3, count);
+        assertEquals(3, count);
     }
 
     @Test
@@ -455,14 +464,14 @@ public class TestDynamicQuery {
             .filter( id -> id < c4.customerId)
             .sorted()
             .map( id -> customers.stream()
-                .filter(c -> c.customerId == id).findAny().get() )
-            .collect(Collectors.toList());
+                .filter(c -> c.customerId == id).findAny().orElseThrow())
+            .toList();
 
         List<Customer> list;
         list = nosqlRepo.findAllByCustomerIdLessThan(c4.customerId);
 
-        Assert.assertEquals(expected.size(), list.size());
-        Assert.assertTrue(list.containsAll(expected));
+        assertEquals(expected.size(), list.size());
+        assertTrue(list.containsAll(expected));
     }
 
     @Test
@@ -480,46 +489,46 @@ public class TestDynamicQuery {
         List<Customer> list = nosqlRepo
             .findByAddressGeoJsonPointNear(
                 new Circle( new Point(40.710376, -74.012735), 10));
-        Assert.assertTrue(list.isEmpty());
+        assertTrue(list.isEmpty());
 
         list = nosqlRepo
             .findByAddressGeoJsonPointNear(
                 new Circle( new Point(40.710376, -74.012735), 1000));
-        Assert.assertEquals(1, list.size());
-        Assert.assertTrue(list.contains(c5));
+        assertEquals(1, list.size());
+        assertTrue(list.contains(c5));
 
         list = nosqlRepo
             .findByAddressGeoJsonPointNear(
                 new Circle( new Point(40.710376, -74.012735), 5000));
-        Assert.assertEquals(2, list.size());
-        Assert.assertTrue(list.containsAll(Arrays.asList(c5, c6)));
+        assertEquals(2, list.size());
+        assertTrue(list.containsAll(Arrays.asList(c5, c6)));
 
 
         // using Within keyword
-        List<Point> coord = new ArrayList<>();
-        coord.add(new Point( 40.736739, -74.024951));
-        coord.add(new Point( 40.679054, -74.038901));
-        coord.add(new Point( 40.729716, -73.961308));
-        coord.add(new Point( 40.736739, -74.024951));
+        List<Point> cord = new ArrayList<>();
+        cord.add(new Point( 40.736739, -74.024951));
+        cord.add(new Point( 40.679054, -74.038901));
+        cord.add(new Point( 40.729716, -73.961308));
+        cord.add(new Point( 40.736739, -74.024951));
 
         // This gets translated to SQL geo_inside(entityShape, polygon)
-        list = nosqlRepo.findByAddressGeoJsonPointWithin(new Polygon(coord));
+        list = nosqlRepo.findByAddressGeoJsonPointWithin(new Polygon(cord));
 
-        Assert.assertEquals(1, list.size());
-        Assert.assertTrue(list.contains(c5));
+        assertEquals(1, list.size());
+        assertTrue(list.contains(c5));
 
 
-        coord.clear();
-        coord.add(new Point( 40.736739, -74.024951));
-        coord.add(new Point( 40.689174, -74.054158));
-        coord.add(new Point( 40.679054, -74.038901));
-        coord.add(new Point( 40.729716, -73.961308));
-        coord.add(new Point( 40.736739, -74.024951));
+        cord.clear();
+        cord.add(new Point( 40.736739, -74.024951));
+        cord.add(new Point( 40.689174, -74.054158));
+        cord.add(new Point( 40.679054, -74.038901));
+        cord.add(new Point( 40.729716, -73.961308));
+        cord.add(new Point( 40.736739, -74.024951));
 
-        list = nosqlRepo.findByAddressGeoJsonPointWithin(new Polygon(coord));
+        list = nosqlRepo.findByAddressGeoJsonPointWithin(new Polygon(cord));
 
-        Assert.assertEquals(2, list.size());
-        Assert.assertTrue(list.containsAll(Arrays.asList(c5, c6)));
+        assertEquals(2, list.size());
+        assertTrue(list.containsAll(Arrays.asList(c5, c6)));
 
         //todo add support for LineString, MultiPoint, MultiLineString,
         // MultiPolygon and GeometryCollection
@@ -531,53 +540,53 @@ public class TestDynamicQuery {
     public void testDeleteBy() {
         List<Customer> list = nosqlRepo
             .deleteByFirstName("John");
-        Assert.assertTrue(list.size() == 2 &&
+        assertTrue(list.size() == 2 &&
             list.containsAll(Arrays.asList(c3, c4)));
 
         list = nosqlRepo.findByFirstName("Smith");
-        Assert.assertTrue(list.isEmpty());
+        assertTrue(list.isEmpty());
 
         list = nosqlRepo.removeByLastName("Smith");
-        Assert.assertTrue(list.size() == 2 &&
+        assertTrue(list.size() == 2 &&
             list.containsAll(Arrays.asList(c1, c2)));
 
         list = nosqlRepo.findByLastName("Smith");
-        Assert.assertTrue(list.isEmpty());
+        assertTrue(list.isEmpty());
     }
 
     @Test
     public void testFindByNot() {
         List<Customer> list = nosqlRepo.findByFirstNameNot("John");
-        Assert.assertEquals(5, list.size());
-        Assert.assertTrue(list.containsAll(Arrays.asList(c1, c2, c5, c6, c7)));
+        assertEquals(5, list.size());
+        assertTrue(list.containsAll(Arrays.asList(c1, c2, c5, c6, c7)));
     }
 
     @Test
     public void testFindByIsNull() {
         List<Customer> list = nosqlRepo.findByAddressIsNull();
-        Assert.assertEquals(4, list.size());
-        Assert.assertTrue(list.containsAll(Arrays.asList(c1, c2, c3, c4)));
+        assertEquals(4, list.size());
+        assertTrue(list.containsAll(Arrays.asList(c1, c2, c3, c4)));
 
         list = nosqlRepo.findByAddressNotNull();
-        Assert.assertEquals(3, list.size());
-        Assert.assertTrue(list.containsAll(Arrays.asList(c5, c6, c7)));
+        assertEquals(3, list.size());
+        assertTrue(list.containsAll(Arrays.asList(c5, c6, c7)));
     }
 
     @Test
     public void testFirstTop() {
         List<Customer> list = nosqlRepo.findFirstByOrderByLastNameAsc();
-        Assert.assertEquals(1, list.size());
-        Assert.assertTrue(list.contains(c6));
+        assertEquals(1, list.size());
+        assertTrue(list.contains(c6));
 
 
         list = nosqlRepo.findTopByOrderByLastNameDesc();
-        Assert.assertEquals(1, list.size());
+        assertEquals(1, list.size());
         // Result is any one of the 3 Smith customers
-        Assert.assertTrue(Arrays.asList(c1, c2, c3).containsAll(list));
+        assertTrue(Arrays.asList(c1, c2, c3).containsAll(list));
 
         list = nosqlRepo.findTop2ByOrderByLastNameAsc();
-        Assert.assertEquals(2, list.size());
-        Assert.assertTrue(list.containsAll(Arrays.asList(c4, c6)));
+        assertEquals(2, list.size());
+        assertTrue(list.containsAll(Arrays.asList(c4, c6)));
     }
 
     @Test
@@ -585,13 +594,13 @@ public class TestDynamicQuery {
         // AND takes precedence over OR
         List<Customer> list = nosqlRepo.findByFirstNameAndLastNameOrKids(
             "John" , "Doe", 2);
-        Assert.assertEquals(2, list.size());
-        Assert.assertTrue(list.containsAll(Arrays.asList(c2, c4)));
+        assertEquals(2, list.size());
+        assertTrue(list.containsAll(Arrays.asList(c2, c4)));
 
 
         list = nosqlRepo.findByFirstNameOrLastNameAndKids(
             "John" , "Doe", 2);
-        Assert.assertEquals(2, list.size());
-        Assert.assertTrue(list.containsAll(Arrays.asList(c3, c4)));
+        assertEquals(2, list.size());
+        assertTrue(list.containsAll(Arrays.asList(c3, c4)));
     }
 }
